--- a/src/Interfaz/ASInicio.form
+++ b/src/Interfaz/ASInicio.form
@@ -109,7 +109,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPAdminGeneral" alignment="0" pref="740" max="32767" attributes="0"/>
+          <Component id="jPAdminGeneral" alignment="0" pref="744" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -145,7 +145,7 @@
                           </Group>
                           <EmptySpace min="-2" pref="137" max="-2" attributes="0"/>
                           <Component id="jAdminGral" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="192" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
@@ -163,7 +163,11 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jPlatoMasVendido" min="-2" pref="215" max="-2" attributes="0"/>
-                                      <Component id="jBGananciaPromedio" min="-2" pref="215" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="jBGananciaPromedio" min="-2" pref="215" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="jInsumosContables" min="-2" pref="215" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -179,6 +183,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                   <Component id="jAdminGral2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+                  <Component id="jAdminGral3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jAdminGral1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
@@ -203,11 +209,13 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jAdminGral1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jAdminGral2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jAdminGral3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jPropinasChef" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="jBGananciaPromedio" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jInsumosContables" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -423,6 +431,31 @@
               <Font name="Lucida Calligraphy" size="24" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Estad&#xed;sticas"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="jInsumosContables">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="66" green="66" red="0" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Microsoft YaHei UI" size="14" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Insumos Contable"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jInsumosContablesActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jAdminGral3">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Lucida Calligraphy" size="24" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Insumos"/>
           </Properties>
         </Component>
       </SubComponents>
